--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "gh-pages": "^3.1.0",
+    "material-ui-audio-player": "^1.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
